--- a/portfolio.html
+++ b/portfolio.html
@@ -35,7 +35,9 @@
               <a class="link" href="./index.html">Studio</a>
             </li>
             <li class="header-nav-item">
-              <a class="link" href="./portfolio.html">Portfolio</a>
+              <a class="link header-link current" href="./portfolio.html"
+                >Portfolio</a
+              >
             </li>
             <li class="header-nav-item">
               <a class="link" href="">Contacts</a>
@@ -75,12 +77,21 @@
           <ul class="list portfolio-list">
             <li class="portfolio-item">
               <a class="portfolio-link link" href="">
-                <img
-                  src="./images/portfolio/banking-app.jpg"
-                  alt="Banking App Interface Concept"
-                  width="360"
-                  height="300"
-                />
+                <div class="product-wrapper">
+                  <img
+                    src="./images/portfolio/banking-app.jpg"
+                    alt="Banking App Interface Concept"
+                    width="360"
+                    height="300"
+                  />
+                  <div class="overlay">
+                    <p class="overlay-descr">
+                      14 Stylish and User-Friendly App Design Concepts · Task
+                      Manager App · Calorie Tracker App · Exotic Fruit Ecommerce
+                      App · Cloud Storage App
+                    </p>
+                  </div>
+                </div>
                 <div class="portfolio-descr">
                   <h2 class="sub-title">Banking App Interface Concept</h2>
                   <p class="text">App</p>
@@ -89,12 +100,21 @@
             </li>
             <li class="portfolio-item">
               <a class="portfolio-link link" href="">
-                <img
-                  src="./images/portfolio/cashless.jpg"
-                  alt="Cashless Payment"
-                  width="360"
-                  height="300"
-                />
+                <div class="product-wrapper">
+                  <img
+                    src="./images/portfolio/cashless.jpg"
+                    alt="Cashless Payment"
+                    width="360"
+                    height="300"
+                  />
+                  <div class="overlay">
+                    <p class="overlay-descr">
+                      14 Stylish and User-Friendly App Design Concepts · Task
+                      Manager App · Calorie Tracker App · Exotic Fruit Ecommerce
+                      App · Cloud Storage App
+                    </p>
+                  </div>
+                </div>
                 <div class="portfolio-descr">
                   <h2 class="sub-title">Cashless Payment</h2>
                   <p class="text">Marketing</p>
@@ -103,12 +123,21 @@
             </li>
             <li class="portfolio-item">
               <a class="portfolio-link link" href="">
-                <img
-                  src="./images/portfolio/meditation.jpg"
-                  alt="Banking App Interface Concept"
-                  width="360"
-                  height="300"
-                />
+                <div class="product-wrapper">
+                  <img
+                    src="./images/portfolio/meditation.jpg"
+                    alt="Banking App Interface Concept"
+                    width="360"
+                    height="300"
+                  />
+                  <div class="overlay">
+                    <p class="overlay-descr">
+                      14 Stylish and User-Friendly App Design Concepts · Task
+                      Manager App · Calorie Tracker App · Exotic Fruit Ecommerce
+                      App · Cloud Storage App
+                    </p>
+                  </div>
+                </div>
                 <div class="portfolio-descr">
                   <h2 class="sub-title">Meditation App</h2>
                   <p class="text">App</p>
@@ -117,12 +146,21 @@
             </li>
             <li class="portfolio-item">
               <a class="portfolio-link link" href="">
-                <img
-                  src="./images/portfolio/taxi.jpg"
-                  alt="Taxi Service"
-                  width="360"
-                  height="300"
-                />
+                <div class="product-wrapper">
+                  <img
+                    src="./images/portfolio/taxi.jpg"
+                    alt="Taxi Service"
+                    width="360"
+                    height="300"
+                  />
+                  <div class="overlay">
+                    <p class="overlay-descr">
+                      14 Stylish and User-Friendly App Design Concepts · Task
+                      Manager App · Calorie Tracker App · Exotic Fruit Ecommerce
+                      App · Cloud Storage App
+                    </p>
+                  </div>
+                </div>
                 <div class="portfolio-descr">
                   <h2 class="sub-title">Taxi Service</h2>
                   <p class="text">Marketing</p>
@@ -131,12 +169,21 @@
             </li>
             <li class="portfolio-item">
               <a class="portfolio-link link" href="">
-                <img
-                  src="./images/portfolio/screen.jpg"
-                  alt="Screen Illustrations"
-                  width="360"
-                  height="300"
-                />
+                <div class="product-wrapper">
+                  <img
+                    src="./images/portfolio/screen.jpg"
+                    alt="Screen Illustrations"
+                    width="360"
+                    height="300"
+                  />
+                  <div class="overlay">
+                    <p class="overlay-descr">
+                      14 Stylish and User-Friendly App Design Concepts · Task
+                      Manager App · Calorie Tracker App · Exotic Fruit Ecommerce
+                      App · Cloud Storage App
+                    </p>
+                  </div>
+                </div>
                 <div class="portfolio-descr">
                   <h2 class="sub-title">Screen Illustrations</h2>
                   <p class="text">Design</p>
@@ -145,12 +192,21 @@
             </li>
             <li class="portfolio-item">
               <a class="portfolio-link link" href="">
-                <img
-                  src="./images/portfolio/courses.jpg"
-                  alt="Online Courses"
-                  width="360"
-                  height="300"
-                />
+                <div class="product-wrapper">
+                  <img
+                    src="./images/portfolio/courses.jpg"
+                    alt="Online Courses"
+                    width="360"
+                    height="300"
+                  />
+                  <div class="overlay">
+                    <p class="overlay-descr">
+                      14 Stylish and User-Friendly App Design Concepts · Task
+                      Manager App · Calorie Tracker App · Exotic Fruit Ecommerce
+                      App · Cloud Storage App
+                    </p>
+                  </div>
+                </div>
                 <div class="portfolio-descr">
                   <h2 class="sub-title">Online Courses</h2>
                   <p class="text">Marketing</p>
@@ -159,12 +215,21 @@
             </li>
             <li class="portfolio-item">
               <a class="portfolio-link link" href="">
-                <img
-                  src="./images/portfolio/instagram-stories.jpg"
-                  alt="Instagram Stories Concept"
-                  width="360"
-                  height="300"
-                />
+                <div class="product-wrapper">
+                  <img
+                    src="./images/portfolio/instagram-stories.jpg"
+                    alt="Instagram Stories Concept"
+                    width="360"
+                    height="300"
+                  />
+                  <div class="overlay">
+                    <p class="overlay-descr">
+                      14 Stylish and User-Friendly App Design Concepts · Task
+                      Manager App · Calorie Tracker App · Exotic Fruit Ecommerce
+                      App · Cloud Storage App
+                    </p>
+                  </div>
+                </div>
                 <div class="portfolio-descr">
                   <h2 class="sub-title">Instagram Stories Concept</h2>
                   <p class="text">Design</p>
@@ -173,12 +238,21 @@
             </li>
             <li class="portfolio-item">
               <a class="portfolio-link link" href="">
-                <img
-                  src="./images/portfolio/organic.jpg"
-                  alt="Screen Illustrations"
-                  width="360"
-                  height="300"
-                />
+                <div class="product-wrapper">
+                  <img
+                    src="./images/portfolio/organic.jpg"
+                    alt="Screen Illustrations"
+                    width="360"
+                    height="300"
+                  />
+                  <div class="overlay">
+                    <p class="overlay-descr">
+                      14 Stylish and User-Friendly App Design Concepts · Task
+                      Manager App · Calorie Tracker App · Exotic Fruit Ecommerce
+                      App · Cloud Storage App
+                    </p>
+                  </div>
+                </div>
                 <div class="portfolio-descr">
                   <h2 class="sub-title">Organic Food</h2>
                   <p class="text">Web Site</p>
@@ -187,12 +261,21 @@
             </li>
             <li class="portfolio-item">
               <a class="portfolio-link link" href="">
-                <img
-                  src="./images/portfolio/fresh.jpg"
-                  alt="Fresh Coffee"
-                  width="360"
-                  height="300"
-                />
+                <div class="product-wrapper">
+                  <img
+                    src="./images/portfolio/fresh.jpg"
+                    alt="Fresh Coffee"
+                    width="360"
+                    height="300"
+                  />
+                  <div class="overlay">
+                    <p class="overlay-descr">
+                      14 Stylish and User-Friendly App Design Concepts · Task
+                      Manager App · Calorie Tracker App · Exotic Fruit Ecommerce
+                      App · Cloud Storage App
+                    </p>
+                  </div>
+                </div>
                 <div class="portfolio-descr">
                   <h2 class="sub-title">Fresh Coffee</h2>
                   <p class="text">Web Site</p>
