--- a/portfolio.html
+++ b/portfolio.html
@@ -77,7 +77,7 @@
           <ul class="list portfolio-list">
             <li class="portfolio-item">
               <a class="portfolio-link link" href="">
-                <div class="product-wrapper">
+                <div class="product-box">
                   <img
                     src="./images/portfolio/banking-app.jpg"
                     alt="Banking App Interface Concept"
@@ -100,7 +100,7 @@
             </li>
             <li class="portfolio-item">
               <a class="portfolio-link link" href="">
-                <div class="product-wrapper">
+                <div class="product-box">
                   <img
                     src="./images/portfolio/cashless.jpg"
                     alt="Cashless Payment"
@@ -123,7 +123,7 @@
             </li>
             <li class="portfolio-item">
               <a class="portfolio-link link" href="">
-                <div class="product-wrapper">
+                <div class="product-box">
                   <img
                     src="./images/portfolio/meditation.jpg"
                     alt="Banking App Interface Concept"
@@ -146,7 +146,7 @@
             </li>
             <li class="portfolio-item">
               <a class="portfolio-link link" href="">
-                <div class="product-wrapper">
+                <div class="product-box">
                   <img
                     src="./images/portfolio/taxi.jpg"
                     alt="Taxi Service"
@@ -169,7 +169,7 @@
             </li>
             <li class="portfolio-item">
               <a class="portfolio-link link" href="">
-                <div class="product-wrapper">
+                <div class="product-box">
                   <img
                     src="./images/portfolio/screen.jpg"
                     alt="Screen Illustrations"
@@ -192,7 +192,7 @@
             </li>
             <li class="portfolio-item">
               <a class="portfolio-link link" href="">
-                <div class="product-wrapper">
+                <div class="product-box">
                   <img
                     src="./images/portfolio/courses.jpg"
                     alt="Online Courses"
@@ -215,7 +215,7 @@
             </li>
             <li class="portfolio-item">
               <a class="portfolio-link link" href="">
-                <div class="product-wrapper">
+                <div class="product-box">
                   <img
                     src="./images/portfolio/instagram-stories.jpg"
                     alt="Instagram Stories Concept"
@@ -238,7 +238,7 @@
             </li>
             <li class="portfolio-item">
               <a class="portfolio-link link" href="">
-                <div class="product-wrapper">
+                <div class="product-box">
                   <img
                     src="./images/portfolio/organic.jpg"
                     alt="Screen Illustrations"
@@ -261,7 +261,7 @@
             </li>
             <li class="portfolio-item">
               <a class="portfolio-link link" href="">
-                <div class="product-wrapper">
+                <div class="product-box">
                   <img
                     src="./images/portfolio/fresh.jpg"
                     alt="Fresh Coffee"
